[package]
name = "yamloom"
version = "0.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yamloom"
crate-type = ["cdylib"]

[dependencies]
hashlink = "0.11.0"
pyo3 = { version="0.27.0", features = ["extension-module", "abi3", "generate-import-lib"] }
yaml-rust2 = "0.11.0"
