[package]
name = "yamloom"
version = "0.4.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yamloom"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.10.0"
hashlink = "0.11.0"
jsonschema = { version = "0.40.0", default-features = false }
pyo3 = { version="0.27.0", features = ["extension-module", "abi3", "generate-import-lib"] }
serde_json = "1.0.149"
yaml-rust2 = "0.11.0"
